remove quotation marks

--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -32,8 +32,8 @@
                                 <div class="media">
                                     <img alt="Image" src="assets/img/avatar-male-1.jpg" class="avatar avatar-xs" />
                                     <div class="media-body">
-                                        <p class="text-small">
-                                            “Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.”
+                                        <p>
+                                            Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.
                                         </p>
                                     </div>
                                 </div>
@@ -45,8 +45,8 @@
                                 <div class="media">
                                     <img alt="Image" src="assets/img/avatar-male-1.jpg" class="avatar avatar-xs" />
                                     <div class="media-body">
-                                        <p class="text-small">
-                                            “Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.”
+                                        <p>
+                                            Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.
                                         </p>
                                     </div>
                                 </div>
@@ -58,8 +58,8 @@
                                 <div class="media">
                                     <img alt="Image" src="assets/img/avatar-male-1.jpg" class="avatar avatar-xs" />
                                     <div class="media-body">
-                                        <p class="text-small">
-                                            “Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.”
+                                        <p>
+                                            Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.
                                         </p>
                                     </div>
                                 </div>
