signup form style

--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -11,6 +11,24 @@
     <link href="{{{cdn}}}/wingman/css/socicon.css" rel="stylesheet" type="text/css" media="all" />
     <link href="{{{cdn}}}/wingman/css/entypo.css" rel="stylesheet" type="text/css" media="all" />
     <link href="{{{cdn}}}/wingman/css/theme.css" rel="stylesheet" type="text/css" media="all" />
+    <style>
+        .create-site-form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        @media (max-width: 568px) {
+            .space-sm {
+                padding-top: 0rem;
+                padding-bottom: 0rem;
+            }
+
+            .container {
+                padding: 0px;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -24,7 +42,9 @@
                     <div>
                         <div class="mb-3 text-center">
                             <img style="width:220px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s440" />
-                            <p class="py-3"><span>All plans come with 14 days free</span></p>
+                            <p class="py-3">
+                                All plans come with 14 days free
+                            </p>
                         </div>
 
                         <div class="card card-sm text-left">
@@ -69,10 +89,10 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-5 card-body bg-secondary">
-                    <div class="text-center mb-5">
-                        <h1 class="h2 mb-2">Start creating immediately</h1>
-                        <span>Create your own Vertex 360 site for free below</span>
+                <div class="col-12 col-md-5 card-body bg-secondary create-site-form">
+                    <div class="text-center mb-4">
+                        <h1 class="h2 mb-2">Launch Free Site</h1>
+                        <span>Create your own Vertex 360 site for free below.</span>
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-12 col-lg-9">
