--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -40,7 +40,7 @@
             <div class="row flex-md-row card card-lg">
                 <div class="col-12 col-md-7 card-body">
                     <div>
-                        <div class="mb-3 text-center">
+                        <div class="mb-3 mt-3 text-center">
                             <img style="width:220px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s440" />
                             <p class="py-3">
                                 All plans come with 14 days free
