landing page images

--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -27,6 +27,10 @@
             .container {
                 padding: 0px;
             }
+
+            .create-site-form {
+                padding: 64px;
+            }
         }
     </style>
 </head>
@@ -42,15 +46,16 @@
                     <div class="mb-3 mt-3 text-center">
                         <img style="width:220px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s440" />
                         <p class="py-3">
-                            All plans come with 14 days free
+                            Simple, free blog and link aggregator websites.<br>It's like running a Reddit sub on your own wesbite.
                         </p>
                     </div>
 
-                    <div class="card card-sm text-left">
-                        <div class="card-body p-4" style="background:#fcfeff">
+                    <div class="card card-sm text-left" style="display:flex;flex-direction:row">
+                        <img alt="Vertex 360" src="https://lh3.googleusercontent.com/Z0t4UsbKRWhrqIA01FHkKsjufvUHmbT3iOHa52TL9jCkCZaE_8wSf1oSI6cnWrPH-pZ2s1drpI7E8Yc-5liCEYRYtQ=s512-c" style="border-radius:3px;max-width:180px" />
+                        <div class="card-body p-3" style="background:#fcfeff;flex:1">
                             <div class="media">
-                                <img alt="Image" src="assets/img/avatar-male-1.jpg" class="avatar avatar-xs" />
                                 <div class="media-body">
+                                    <h5 class="mb-1">Promote Your Brand</h5>
                                     <p>
                                         Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.
                                     </p>
@@ -59,11 +64,12 @@
                         </div>
                     </div>
 
-                    <div class="card card-sm text-left">
-                        <div class="card-body p-4" style="background:#fcfeff">
+                    <div class="card card-sm text-left" style="display:flex;flex-direction:row">
+                        <img alt="Vertex 360" src="https://lh3.googleusercontent.com/2iR020EEaw1pXoGv7OSY4kfAKYap12GGeoQGx9rBWZHEGA-x8gXd19RauRey2jtu6EWWaspEDV5ZJigLZTPIGXyOfpw=s512-c" style="border-radius:3px;max-width:180px" />
+                        <div class="card-body p-3" style="background:#fcfeff;flex:1">
                             <div class="media">
-                                <img alt="Image" src="assets/img/avatar-male-1.jpg" class="avatar avatar-xs" />
                                 <div class="media-body">
+                                    <h5 class="mb-1">Build Community</h5>
                                     <p>
                                         Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.
                                     </p>
@@ -72,11 +78,12 @@
                         </div>
                     </div>
 
-                    <div class="card card-sm text-left">
-                        <div class="card-body p-4" style="background:#fcfeff">
+                    <div class="card card-sm text-left" style="display:flex;flex-direction:row">
+                        <img alt="Vertex 360" src="https://lh3.googleusercontent.com/HS3sEQuG94c2lFtdzGfsFuFbEAPIhTg7aPwQMjNJoI27G9bmI7uc_kPKwh9cWjVdZnb-87znMTDg7InrLhGGh8tayQ=s512-c" style="border-radius:3px;max-width:180px" />
+                        <div class="card-body p-3" style="background:#fcfeff;flex:1">
                             <div class="media">
-                                <img alt="Image" src="assets/img/avatar-male-1.jpg" class="avatar avatar-xs" />
                                 <div class="media-body">
+                                    <h5 class="mb-1">Earn Money</h5>
                                     <p>
                                         Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.
                                     </p>
@@ -84,6 +91,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
 
                 <div class="col-12 col-md-5 card-body bg-secondary create-site-form">
