--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -51,7 +51,7 @@
                     </div>
 
                     <div class="card card-sm text-left" style="display:flex;flex-direction:row">
-                        <img alt="Vertex 360" src="https://lh3.googleusercontent.com/Z0t4UsbKRWhrqIA01FHkKsjufvUHmbT3iOHa52TL9jCkCZaE_8wSf1oSI6cnWrPH-pZ2s1drpI7E8Yc-5liCEYRYtQ=s512-c" style="border-radius:3px;max-width:180px" />
+                        <img alt="Vertex 360" src="https://lh3.googleusercontent.com/Z0t4UsbKRWhrqIA01FHkKsjufvUHmbT3iOHa52TL9jCkCZaE_8wSf1oSI6cnWrPH-pZ2s1drpI7E8Yc-5liCEYRYtQ=s512-c" style="border-radius:3px;width:180px;height:180px" />
                         <div class="card-body p-3" style="background:#fcfeff;flex:1">
                             <div class="media">
                                 <div class="media-body">
@@ -65,7 +65,7 @@
                     </div>
 
                     <div class="card card-sm text-left" style="display:flex;flex-direction:row">
-                        <img alt="Vertex 360" src="https://lh3.googleusercontent.com/2iR020EEaw1pXoGv7OSY4kfAKYap12GGeoQGx9rBWZHEGA-x8gXd19RauRey2jtu6EWWaspEDV5ZJigLZTPIGXyOfpw=s512-c" style="border-radius:3px;max-width:180px" />
+                        <img alt="Vertex 360" src="https://lh3.googleusercontent.com/2iR020EEaw1pXoGv7OSY4kfAKYap12GGeoQGx9rBWZHEGA-x8gXd19RauRey2jtu6EWWaspEDV5ZJigLZTPIGXyOfpw=s512-c" style="border-radius:3px;width:180px;height:180px" />
                         <div class="card-body p-3" style="background:#fcfeff;flex:1">
                             <div class="media">
                                 <div class="media-body">
@@ -79,7 +79,7 @@
                     </div>
 
                     <div class="card card-sm text-left" style="display:flex;flex-direction:row">
-                        <img alt="Vertex 360" src="https://lh3.googleusercontent.com/HS3sEQuG94c2lFtdzGfsFuFbEAPIhTg7aPwQMjNJoI27G9bmI7uc_kPKwh9cWjVdZnb-87znMTDg7InrLhGGh8tayQ=s512-c" style="border-radius:3px;max-width:180px" />
+                        <img alt="Vertex 360" src="https://lh3.googleusercontent.com/HS3sEQuG94c2lFtdzGfsFuFbEAPIhTg7aPwQMjNJoI27G9bmI7uc_kPKwh9cWjVdZnb-87znMTDg7InrLhGGh8tayQ=s512-c" style="border-radius:3px;width:180px;height:180px" />
                         <div class="card-body p-3" style="background:#fcfeff;flex:1">
                             <div class="media">
                                 <div class="media-body">
