--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -24,6 +24,10 @@
             height: 180px
         }
 
+        .card-body {
+            padding: 1.5rem !important;
+        }
+
         @media (max-width: 568px) {
             .space-sm {
                 padding-top: 0rem;
@@ -40,8 +44,12 @@
 
             .feature img {
                 border-radius: 3px;
-                width: 140px;
-                height: 140px
+                width: 120px;
+                height: 120px
+            }
+
+            .card-body {
+                padding: 0.75rem !important;
             }
 
         }
