--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -49,7 +49,7 @@
             }
 
             .card-body {
-                padding: 0.75rem !important;
+                padding: 136px !important;
             }
 
         }
