--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -42,10 +42,14 @@
                 padding: 64px;
             }
 
+            .feature-body {
+                padding: 12px;
+            }
+
             .feature img {
                 border-radius: 3px;
-                width: 120px;
-                height: 120px
+                width: 130px;
+                height: 130px
             }
         }
     </style>
@@ -68,7 +72,7 @@
 
                     <div class="card card-sm text-left feature" style="display:flex;flex-direction:row">
                         <img alt="Vertex 360" src="https://lh3.googleusercontent.com/Z0t4UsbKRWhrqIA01FHkKsjufvUHmbT3iOHa52TL9jCkCZaE_8wSf1oSI6cnWrPH-pZ2s1drpI7E8Yc-5liCEYRYtQ=s512-c" />
-                        <div class="card-body" style="background:#fcfeff;flex:1">
+                        <div class="card-body feature-body" style="background:#fcfeff;flex:1">
                             <div class="media">
                                 <div class="media-body">
                                     <h5 class="mb-1">Promote Your Brand</h5>
@@ -82,7 +86,7 @@
 
                     <div class="card card-sm text-left feature" style="display:flex;flex-direction:row">
                         <img alt="Vertex 360" src="https://lh3.googleusercontent.com/2iR020EEaw1pXoGv7OSY4kfAKYap12GGeoQGx9rBWZHEGA-x8gXd19RauRey2jtu6EWWaspEDV5ZJigLZTPIGXyOfpw=s512-c" />
-                        <div class="card-body" style="background:#fcfeff;flex:1">
+                        <div class="card-body feature-body" style="background:#fcfeff;flex:1">
                             <div class="media">
                                 <div class="media-body">
                                     <h5 class="mb-1">Build Community</h5>
@@ -96,7 +100,7 @@
 
                     <div class="card card-sm text-left feature" style="display:flex;flex-direction:row">
                         <img alt="Vertex 360" src="https://lh3.googleusercontent.com/HS3sEQuG94c2lFtdzGfsFuFbEAPIhTg7aPwQMjNJoI27G9bmI7uc_kPKwh9cWjVdZnb-87znMTDg7InrLhGGh8tayQ=s512-c" />
-                        <div class="card-body" style="background:#fcfeff;flex:1">
+                        <div class="card-body feature-body" style="background:#fcfeff;flex:1">
                             <div class="media">
                                 <div class="media-body">
                                     <h5 class="mb-1">Earn Money</h5>
