--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -43,7 +43,7 @@
             }
 
             .feature-body {
-                padding: 12px;
+                padding: 12px !important;
             }
 
             .feature img {
