--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -46,6 +46,10 @@
                 padding: 12px !important;
             }
 
+            .feature-body p {
+                font-size: 12px;
+            }
+
             .feature img {
                 border-radius: 3px;
                 width: 130px;
