--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -39,7 +39,7 @@
             }
 
             .create-site-form {
-                padding: 64px;
+                padding: 64px !important;
             }
 
             .feature-body {
