--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -79,9 +79,9 @@
                         <div class="card-body feature-body" style="background:#fcfeff;flex:1">
                             <div class="media">
                                 <div class="media-body">
-                                    <h5 class="mb-1">Promote Your Brand</h5>
+                                    <h5 class="mb-1">Establish Your Brand</h5>
                                     <p>
-                                        Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.
+                                        By publishing insightful blog posts, and sharing interesting links - gain credibility in your industry and establish a reputable brand.
                                     </p>
                                 </div>
                             </div>
@@ -93,9 +93,9 @@
                         <div class="card-body feature-body" style="background:#fcfeff;flex:1">
                             <div class="media">
                                 <div class="media-body">
-                                    <h5 class="mb-1">Build Community</h5>
+                                    <h5 class="mb-1">Grow Your Audience</h5>
                                     <p>
-                                        Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.
+                                        Invite others to share content such as links and blog posts. Build an audience by replying to comments and engaging in conversation.
                                     </p>
                                 </div>
                             </div>
@@ -107,9 +107,9 @@
                         <div class="card-body feature-body" style="background:#fcfeff;flex:1">
                             <div class="media">
                                 <div class="media-body">
-                                    <h5 class="mb-1">Earn Money</h5>
+                                    <h5 class="mb-1">Profit!</h5>
                                     <p>
-                                        Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.
+                                        Sites with at least 1000 subscribers are eligible for our ad-revenue sharing program. Unlike other content sharing sites, Vertex 360 "spreads the wealth."
                                     </p>
                                 </div>
                             </div>
