create site button

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -165,6 +165,9 @@
 			</div>
 
       <div id="content-sites" class="dashboard-list-box margin-top-0 margin-bottom-40">
+        <div style="float: right; padding: 20px;">
+          <a href="/templates" class="button" style="float: right; border-radius: 4px; background: rgb(53, 125, 62);">Create Site</a>
+        </div>
         <h4 class="gray">Manage Your Sites</h4>
         <ul>
           {{#sites}}
