btn-header class

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -38,6 +38,14 @@
     .sidebar-menu-option {
       margin-left: 4px;
     }
+
+    .btn-header {
+      float: right;
+      border-radius: 4px;
+      background: #357d3e;
+      margin-top: 16px;
+      margin-right: 16px
+    }
   </style>
 </head>
 
@@ -104,8 +112,8 @@
 
 			<div class="col-lg-8 col-md-8">
         <div id="content-profile" class="dashboard-list-box margin-top-0 margin-bottom-40">
-          <a style="float:right;border-radius:4px;background:#357d3e;margin-top:16px;margin-right:16px" class="button" href="/templates"><i class="sl sl-icon-plus"></i> Create Site</a>
-          <a style="float:right;border-radius:4px;background:#354e7d;margin-top:16px;margin-right:16px" class="button" href="/profile/{{user.slug}}">View Your Profile</a>
+          <a class="button btn-header" href="/templates"><i class="sl sl-icon-plus"></i> Create Site</a>
+          <a class="button btn-header" href="/profile/{{user.slug}}">View Your Profile</a>
 					<h4 class="gray">Profile Details</h4>
 					<div class="dashboard-list-box-static">
             <div class="row">
@@ -164,7 +172,7 @@
 			</div>
 
       <div id="content-sites" class="dashboard-list-box margin-top-0 margin-bottom-40">
-        <a href="/templates" class="button" style="float: right; border-radius: 4px; background: rgb(53, 125, 62);"><i class="sl sl-icon-plus"></i> Create Site</a>
+        <a href="/templates" class="button btn-header"><i class="sl sl-icon-plus"></i> Create Site</a>
         <h4 class="gray">Manage Your Sites</h4>
         <ul>
           {{#sites}}
