--- a/views/account.mustache
+++ b/views/account.mustache
@@ -40,11 +40,11 @@
     }
 
     .btn-header {
-      float: right;
-      border-radius: 4px;
-      background: #357d3e;
-      margin-top: 16px;
-      margin-right: 16px
+      float: right !important;
+      border-radius: 4px !important;
+      background: #357d3e !important;
+      margin-top: 16px !important;
+      margin-right: 16px !important;
     }
   </style>
 </head>
