--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -148,7 +148,7 @@
 
 <footer class="container p-3 text-muted small d-flex">
 	<div style="flex:1">
-		<a target="_blank" href="/">
+		<a target="_blank" href="/landing">
 			<img class="mr-3 mb-3" style="max-width:120px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
 		</a>
 	</div>
