--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -340,7 +340,7 @@
               }
 
 
-              console.log('reply comment: ' + JSON.stringify(commentId))
+              console.log('reply comment: ' + JSON.stringify(comment))
             })
           })
 
