--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -197,8 +197,8 @@
           </div>
           <p style="color:#7d7d7d"><%{text}%></p>
           <a class="btn-reply-comment" id="reply-<% id %>" href="#">Reply</a>
-          <div id="input-reply-<% id %>" style="display:flex">
-            <input style="display:none" type="text" class="form-control" />
+          <div id="input-reply-<% id %>" style="display:none">
+            <input type="text" class="form-control" />
             <button>Submit</button>
           </div>
         </div>
