--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -198,8 +198,8 @@
           <p style="color:#7d7d7d"><%{text}%></p>
           <a class="btn-reply-comment" id="reply-<% id %>" href="#">Reply</a>
           <div id="input-reply-<% id %>" style="display:none">
-            <input type="text" class="form-control" />
-            <button>Submit</button>
+            <input type="text" class="form-control p-1" />
+            <button class="btn btn-success btn-sm mt-2" style="float:right">Submit</button>
           </div>
         </div>
         <div class="comment-vote">
