--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -349,7 +349,7 @@
                   event.preventDefault()
 
                 var replyText = $('#input-reply-'+commentId).val()
-                if (reply.length == 0){
+                if (replyText.length == 0){
                   alert('Please enter a reply.')
                   return
                 }
