include thread ID in reply

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -356,7 +356,7 @@
 
                 var reply = {
                   text: replyText,
-                  thread: '',
+                  thread: data.thread,
                   site: JSON.stringify({id:site.id, slug:site.slug, name:site.name, image:site.image, url:'https://'+site.url}),
                   profile: JSON.stringify({id:user.id, username:user.username, image:user.image, slug:user.slug}),
                 }
