--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -362,7 +362,7 @@
                   context: JSON.stringify({
                     id: comment.id,
                     schema: 'comment',
-                    dateString: comment.dateString || ''
+                    dateString: comment.dateString
                     // title: entity.title || '',
                     // slug: entity.slug || '',
                     // preview: entity.preview || '',
