include title in reply context

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -363,6 +363,7 @@
                     id: comment.id,
                     schema: 'comment',
                     dateString: comment.dateString
+                    title: comment.text.substring(0, 100)+'...'
                   })
                 }
 
