--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -362,7 +362,7 @@
                   context: JSON.stringify({
                     id: comment.id,
                     schema: 'comment',
-                    dateString: comment.dateString
+                    dateString: comment.dateString,
                     title: comment.text.substring(0, 100)+'...'
                   })
                 }
