include url in reply context

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -363,7 +363,8 @@
                     id: comment.id,
                     schema: 'comment',
                     dateString: comment.dateString,
-                    title: comment.text.substring(0, 100)+'...'
+                    title: comment.text.substring(0, 100)+'...',
+                    url: url || ''
                   })
                 }
 
