--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -209,6 +209,11 @@
         </div>
       </div>    
 
+      <%#replies%>
+      <div>
+        <% text %>
+      </div>
+      <%/replies%>
     </div>
   </script>
 
