--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -210,7 +210,7 @@
       </div>    
 
       <%#replies%>
-      <div>
+      <div class="bg-white thread-preview">
         <% text %>
       </div>
       <%/replies%>
