--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -210,7 +210,7 @@
       </div>    
 
       <%#replies%>
-      <div class="bg-white thread-preview">
+      <div class="bg-white reply" style="border-top:1px solid #ededed;display:flex">
         <div class="thread-preview-container">
           <div class="mb-2">
             <a target="_blank" href="#"><img class="site-icon" src="<%{profile.image}%>=s44-c" /></a>
