--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -196,11 +196,16 @@
 
           </div>
           <p style="color:#7d7d7d"><%{text}%></p>
+
+          <%#showContext%><%/showContext%>
+          <%^showContext%>
           <a class="btn-reply-comment" id="reply-<% id %>" href="#">Reply</a>
           <div id="input-reply-container-<% id %>" style="display:none">
             <input id="input-reply-<% id %>" type="text" class="form-control p-1" />
             <button id="btn-submit-reply-<% id %>" class="btn btn-success btn-sm mt-2" style="float:right">Submit</button>
           </div>
+          <%/showContext%>
+
         </div>
         <div class="comment-vote">
           <a href="#"><i id="<% id %>" class="fa fa-arrow-up btn-upvote"></i></a>
